package NightmareScheduler;

import javafx.application.Application;

public class NightmareSchedulerStarter {
  public static void main(String[] args){
    Application.launch(NightmareScheduler.class);
  }
}
