package NightmareScheduler.models;

public interface ScheduleDataInterface {
  
}
