package NightmareScheduler.models;

public class ScheduleDataModel implements ScheduleDataInterface {
  
}
